# shinerainsevenlib

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  objects.inv  plugin_db_store.py  py-modindex.html  pyproject.toml  search.html  searchindex.js  test_m0_files_wrappers.py  test_m1_core_util.py  test_m1_files_listing.py  test_m2_core_data_structures.py  test_m2_files_higher.py  test_m4_core_ui.py  test_m5_batch_util.py
.github/: dependabot.yml  pytest.yaml
.github/workflows/: documentation.yaml  pytest.yaml
_sources/: index.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/addCopyright/: index.rst.txt
_sources/autoapi/parseCode/: index.rst.txt
_sources/autoapi/ruffWrapper/: index.rst.txt
_sources/autoapi/setFilenameOrders/: index.rst.txt
_sources/autoapi/shinerainsevenlib/: index.rst.txt
_sources/source/: configuration.rst.txt  editing_this_project.rst.txt  example_usage.rst.txt  optional_dependencies.rst.txt
autoapi/: index.html
autoapi/addCopyright/: index.html
autoapi/parseCode/: index.html
autoapi/ruffWrapper/: index.html
autoapi/setFilenameOrders/: index.html
autoapi/shinerainsevenlib/: index.html
autoapi/shinerainsevenlib/core/: index.html
docs/: conf.py  index.rst  postProcess.py
docs/autoapi/: index.rst
docs/source/: api.rst  configuration.rst  editing_this_project.rst  example_usage.rst  optional_dependencies.rst
in-progress/: check_tests.py  nocpy_okwithout.txt  okwithout.txt  testHelpers.py  test_commonhigher.py  test_files.py  test_jslike.py  test_m1_core_util.py  test_m4_core_ui.py  test_m5_batch_util.py  test_store_end_to_end.py
in-progress/old-infrastructure/: gen_tests_by_string.py  gen_tests_divide.py  test_gen_tests_divide_functions.py
in-progress/old-tests/: fixtures.py
in-progress/plugins/: plugin_compression.py  plugin_compression_7z.py  plugin_compression_rar.py  plugin_configreader.py  plugin_store.py  py_config_schema_with_configparser.py
in-progress/test_plugins/: prevtest_plugin_compression.py  prevtest_plugin_fileexts.py  prevtest_plugin_store_operations.py  test_plugin_compression.py  test_plugin_configreader.py  test_plugin_media.py  test_plugin_store.py  test_plugin_store_end_to_end.py  test_plugin_store_operations.py
source/: configuration.html  editing_this_project.html  example_usage.html  optional_dependencies.html
src/ben_python_common/: .gitignore  __init__.py  common_higher.py  common_ui.py  common_util.py  files.py  store.py
src/shinerainsevenlib/: __init__.py  __main__.py  standard.py
src/shinerainsoftseven_shinerainsoftsevencommon/: __init__.py  movedout.py
src/shinerainsoftsevencommon/: __init__.py  common_higher.py  common_jslike.py  common_ui.py  common_util_assertions.py  common_util_classes.py  common_util_datetime.py  common_util_strings.py  common_util_structures.py  files_higher.py  files_listing.py  files_processes.py  files_util.py  ordering.py  ordering.txt  preferences.py  replacements.txt
src/shinerainsoftsevencommon_shinerainsoftseven/: .gitignore  __init__.py  common_higher.py  common_ui.py  common_util_assertions.py  common_util_classes.py  common_util_datetime.py  common_util_strings.py  common_util_structures.py  ordering.txt  setup.cfg
src/shinerainsoftsevenutil/: __init__.py  standard.py
test/test_core/: common.py  test_m1_core_util.py  test_m4_core_ui.py  test_m5_batch_util.py
test/test_files/: test_m1_files_wrappers.py  test_m3_files_higher.py
test/test_plugins/: tempCodeRunnerFile.py  test_plugin_compression.py  test_plugin_configreader.py  test_plugin_media.py  test_plugin_store.py  test_plugin_store_end_to_end.py  test_plugin_store_operations.py
tests/: __init__.py  fixtures.py  go.py  newtests.py  test_jslike.py  test_store_end_to_end.py
tests/futurecore/: test_m1_core_util.py
tests/infrastructure/: test_gen_tests.py  test_gen_tests_by_string.py  test_gen_tests_divide_functions.py  test_gen_tests_functions.py
tests/test_core/: common.py  test_m0_text_io.py  test_m1_core_util.py  test_m2_core_data_structures.py  test_m3_core_nonpure.py  test_m4_core_ui.py  test_m5_batch_util.py  test_m6_jslike.py
tests/test_files/: test_m0_files_wrappers.py  test_m1_files_listing.py  test_m1_files_wrappers.py  test_m2_files_higher.py
tests/test_plugins/: test_fileexts.py  test_plugin_fileexts.py  test_plugin_media.py
testsinc/: newtests.py  test_store_end_to_end.py
testsinc/futurecore/: test_m1_core_util.py
testsinc/test_files/: test_m1_files_wrappers.py
tools/: gentests.py  internal-ruff.py  tempCodeRunnerFile.py  tool_add_header.py  tool_list_defs.py  tool_number_prefix.py
tools_this_project/: srssRuffWrapper.py  toolsThisProject.py
(+231 files in other folders)
