[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shinerainsoftsevenutil"
version = "1.0.0"
authors = [
  { name="Ben Fisher", email="shinerainseven@gmail.com" },
]
license = "LGPL-2.1-or-later"
description = "Useful unadorned utilities for powerful Python programming"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/moltenform/shinerainsoftsevenutil"
Issues = "https://github.com/moltenform/shinerainsoftsevenutil/issues"

[tool.ruff]
line-length = 150
indent-width = 4
# Assume Python 3.8
target-version = "py38"

[tool.ruff.lint]
ignore = ["F403", "F405", "E302", "E402", "E228", "E401", "E722", "E731"]
# F403 'from module import *' used; unable to detect undefined names
# F405 Name may be undefined, or defined from star imports: module
# E302 Expected 2 blank lines, found 0
# E402 Module level import not at top of file
# E128 Continuation line under-indented for visual indent (not in ruff?)
# E228 Missing whitespace around modulo operator
# E401 Multiple imports on one line
# E722 Do not use bare 'except'
# E731 Do not assign a lambda expression, use a def
# W504 Line break occurred after a binary operator (not in ruff?)

# these might also be useful to disable
# F405 ok to use a symbol from a import *
# W293 Blank line contains whitespace
# W391 Blank line at end of file

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

